--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Website
+name: Build and Deploy Pug Templates
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -17,18 +18,13 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install pug-cli globally
+        run: npm install -g pug-cli
 
-      - name: Build project
-        run: npm run build
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout built code
-        uses: actions/checkout@v3
+      - name: Compile Pug templates
+        run: |
+          mkdir -p dist
+          pug . --out dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
