--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,12 @@ jobs:
       - name: Compile Pug templates
         run: |
           pug .
-
+          
+      - name: Upload static files as artifact
+        id: deployment
+        uses: actions/upload-pages-artifact@v3 # or specific "vX.X.X" version tag for this action
+        with:
+          path: /
   deploy:
     # Add a dependency to the build job
     needs: build
